update: preprocessed dataset

--- a/Amst/Final Assignment/FeatureSelection.ipynb
+++ b/Amst/Final Assignment/FeatureSelection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +106,8 @@
       "Dep. Variable:                   NVDA   R-squared:                       0.981\n",
       "Model:                            OLS   Adj. R-squared:                  0.980\n",
       "Method:                 Least Squares   F-statistic:                     1429.\n",
-      "Date:                Thu, 05 Dec 2024   Prob (F-statistic):          6.78e-162\n",
-      "Time:                        18:51:35   Log-Likelihood:                -572.19\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          6.78e-162\n",
+      "Time:                        11:54:34   Log-Likelihood:                -572.19\n",
       "No. Observations:                 200   AIC:                             1160.\n",
       "Df Residuals:                     192   BIC:                             1187.\n",
       "Df Model:                           7                                         \n",
@@ -132,7 +132,7 @@
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "benchmark: corr (Y, Y_pred) = 0.9905373878354031\n",
+      "benchmark: corr (Y, Y_pred) = 0.9905373878354035\n",
       "Hard Thresholding selected 8 features:  ['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBBTCUSD' 'CBETHUSD']\n"
      ]
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +195,8 @@
       "Dep. Variable:                   NVDA   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.980\n",
       "Method:                 Least Squares   F-statistic:                     659.1\n",
-      "Date:                Thu, 05 Dec 2024   Prob (F-statistic):          4.31e-151\n",
-      "Time:                        18:52:49   Log-Likelihood:                -569.14\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          4.31e-151\n",
+      "Time:                        11:54:34   Log-Likelihood:                -569.14\n",
       "No. Observations:                 200   AIC:                             1170.\n",
       "Df Residuals:                     184   BIC:                             1223.\n",
       "Df Model:                          15                                         \n",
@@ -229,7 +229,7 @@
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "model 2 Ridge Regression: corr (Y, Y_pred) = 0.9908225941806871\n",
+      "model 2 Ridge Regression: corr (Y, Y_pred) = 0.9908225941806873\n",
       "Ridge Regression selected 16 features:  ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'SMB'\n",
       " 'HML' 'RMW' 'CMA' 'RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n"
      ]
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -263,8 +263,8 @@
       "Dep. Variable:                   NVDA   R-squared:                       0.979\n",
       "Model:                            OLS   Adj. R-squared:                  0.978\n",
       "Method:                 Least Squares   F-statistic:                     1485.\n",
-      "Date:                Thu, 05 Dec 2024   Prob (F-statistic):          1.46e-158\n",
-      "Time:                        18:53:08   Log-Likelihood:                -584.04\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          1.46e-158\n",
+      "Time:                        11:54:34   Log-Likelihood:                -584.04\n",
       "No. Observations:                 200   AIC:                             1182.\n",
       "Df Residuals:                     193   BIC:                             1205.\n",
       "Df Model:                           6                                         \n",
@@ -288,7 +288,7 @@
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "model 3 LASSO: corr (Y, Y_pred) = 0.9893407160983061\n",
+      "model 3 LASSO: corr (Y, Y_pred) = 0.9893407160983059\n",
       "LASSO selected 7 features:  ['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBETHUSD']\n"
      ]
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,8 +321,8 @@
       "Dep. Variable:                   NVDA   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.980\n",
       "Method:                 Least Squares   F-statistic:                     767.6\n",
-      "Date:                Thu, 05 Dec 2024   Prob (F-statistic):          6.43e-154\n",
-      "Time:                        18:53:26   Log-Likelihood:                -569.29\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          6.43e-154\n",
+      "Time:                        11:54:34   Log-Likelihood:                -569.29\n",
       "No. Observations:                 200   AIC:                             1167.\n",
       "Df Residuals:                     186   BIC:                             1213.\n",
       "Df Model:                          13                                         \n",
@@ -353,7 +353,7 @@
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "model 4 Elastic Net: corr (Y, Y_pred) = 0.9908090028620588\n",
+      "model 4 Elastic Net: corr (Y, Y_pred) = 0.9908090028620589\n",
       "ElasticNet selected 14 features:  ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'HML'\n",
       " 'RMW' 'RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n"
      ]
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -387,8 +387,8 @@
       "Dep. Variable:                   NVDA   R-squared (uncentered):                   0.113\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.086\n",
       "Method:                 Least Squares   F-statistic:                              4.129\n",
-      "Date:                Thu, 05 Dec 2024   Prob (F-statistic):                    0.000632\n",
-      "Time:                        18:53:51   Log-Likelihood:                         -1160.0\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    0.000632\n",
+      "Time:                        11:54:34   Log-Likelihood:                         -1160.0\n",
       "No. Observations:                 200   AIC:                                      2332.\n",
       "Df Residuals:                     194   BIC:                                      2352.\n",
       "Df Model:                           6                                                  \n",
@@ -412,7 +412,7 @@
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "model 1 LARS: corr (Y, Y_pred) = 0.9615983550958668\n",
+      "model 1 LARS: corr (Y, Y_pred) = 0.9615983550958669\n",
       "LARS selected 6 features:  ['AVGO\\n' 'Mkt-RF\\n' 'HML\\n' 'CMA\\n' 'CBETHUSD\\n' 'DJIA\\n']\n"
      ]
     }
@@ -432,29 +432,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBBTCUSD' 'CBETHUSD']\n",
-      "['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'SMB'\n",
+      "OLS: ['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBBTCUSD' 'CBETHUSD']\n",
+      "ridge: ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'SMB'\n",
       " 'HML' 'RMW' 'CMA' 'RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
-      "['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBETHUSD']\n",
-      "['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'HML'\n",
+      "lasso: ['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBETHUSD']\n",
+      "elastic net: ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'HML'\n",
       " 'RMW' 'RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
-      "['AVGO' 'Mkt-RF' 'HML' 'CMA' 'CBETHUSD' 'DJIA']\n"
+      "LAS: ['AVGO' 'Mkt-RF' 'HML' 'CMA' 'CBETHUSD' 'DJIA']\n"
      ]
     }
    ],
    "source": [
-    "print(benchmark_select.values)\n",
-    "print(ridge_select.values)\n",
-    "print(lasso_select.values)\n",
-    "print(elastic_select.values)\n",
-    "print(leastAngle_select.values)"
+    "print(f\"OLS: {benchmark_select.values}\")\n",
+    "print(f\"ridge: {ridge_select.values}\")\n",
+    "print(f\"lasso: {lasso_select.values}\")\n",
+    "print(f\"elastic net: {elastic_select.values}\")\n",
+    "print(f\"LAS: {leastAngle_select.values}\")\n"
    ]
   },
   {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -577,8 +577,8 @@
       "Dep. Variable:                   NVDA   R-squared (uncentered):                   0.997\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.997\n",
       "Method:                 Least Squares   F-statistic:                          1.011e+04\n",
-      "Date:                Mon, 25 Nov 2024   Prob (F-statistic):                   8.01e-244\n",
-      "Time:                        14:34:39   Log-Likelihood:                         -581.34\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   8.01e-244\n",
+      "Time:                        11:54:34   Log-Likelihood:                         -581.34\n",
       "No. Observations:                 200   AIC:                                      1177.\n",
       "Df Residuals:                     193   BIC:                                      1200.\n",
       "Df Model:                           7                                                  \n",
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -639,8 +639,8 @@
       "Dep. Variable:                   NVDA   R-squared:                       0.979\n",
       "Model:                            OLS   Adj. R-squared:                  0.978\n",
       "Method:                 Least Squares   F-statistic:                     672.4\n",
-      "Date:                Mon, 25 Nov 2024   Prob (F-statistic):          1.12e-148\n",
-      "Time:                        14:34:39   Log-Likelihood:                -582.28\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          1.12e-148\n",
+      "Time:                        11:54:34   Log-Likelihood:                -582.28\n",
       "No. Observations:                 200   AIC:                             1193.\n",
       "Df Residuals:                     186   BIC:                             1239.\n",
       "Df Model:                          13                                         \n",
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -707,8 +707,8 @@
       "Dep. Variable:                   NVDA   R-squared (uncentered):                   0.997\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.997\n",
       "Method:                 Least Squares   F-statistic:                              9253.\n",
-      "Date:                Mon, 25 Nov 2024   Prob (F-statistic):                   6.63e-244\n",
-      "Time:                        14:34:39   Log-Likelihood:                         -576.31\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   6.63e-244\n",
+      "Time:                        11:54:34   Log-Likelihood:                         -576.31\n",
       "No. Observations:                 200   AIC:                                      1169.\n",
       "Df Residuals:                     192   BIC:                                      1195.\n",
       "Df Model:                           8                                                  \n",
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -777,8 +777,8 @@
       "Dep. Variable:                   NVDA   R-squared (uncentered):                   0.997\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.997\n",
       "Method:                 Least Squares   F-statistic:                              8226.\n",
-      "Date:                Mon, 25 Nov 2024   Prob (F-statistic):                   3.93e-242\n",
-      "Time:                        14:34:39   Log-Likelihood:                         -575.77\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   3.93e-242\n",
+      "Time:                        11:54:34   Log-Likelihood:                         -575.77\n",
       "No. Observations:                 200   AIC:                                      1170.\n",
       "Df Residuals:                     191   BIC:                                      1199.\n",
       "Df Model:                           9                                                  \n",
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -848,8 +848,8 @@
       "Dep. Variable:                   NVDA   R-squared (uncentered):                   0.994\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.994\n",
       "Method:                 Least Squares   F-statistic:                              3879.\n",
-      "Date:                Mon, 25 Nov 2024   Prob (F-statistic):                   8.30e-208\n",
-      "Time:                        14:34:39   Log-Likelihood:                         -662.90\n",
+      "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   8.30e-208\n",
+      "Time:                        11:54:34   Log-Likelihood:                         -662.90\n",
       "No. Observations:                 200   AIC:                                      1342.\n",
       "Df Residuals:                     192   BIC:                                      1368.\n",
       "Df Model:                           8                                                  \n",
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -914,17 +914,17 @@
     }
    ],
    "source": [
-    "print(benchmark_select.values)\n",
-    "print(ridge_select.values)\n",
-    "print(lasso_select.values)\n",
-    "print(elastic_select.values)\n",
-    "print(leastAngle_select.values)"
+    "print(f\"OLS: {benchmark_select.values}\")\n",
+    "print(f\"ridge: {ridge_select.values}\")\n",
+    "print(f\"lasso: {lasso_select.values}\")\n",
+    "print(f\"elastic net: {elastic_select.values}\")\n",
+    "print(f\"LAS: {leastAngle_select.values}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -938,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
