upd: feature preprocess, feature selection

--- a/Amst/Final Assignment/FeatureSelection.ipynb
+++ b/Amst/Final Assignment/FeatureSelection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.980\n",
       "Method:                 Least Squares   F-statistic:                     1429.\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          6.78e-162\n",
-      "Time:                        11:54:34   Log-Likelihood:                -572.19\n",
+      "Time:                        11:54:57   Log-Likelihood:                -572.19\n",
       "No. Observations:                 200   AIC:                             1160.\n",
       "Df Residuals:                     192   BIC:                             1187.\n",
       "Df Model:                           7                                         \n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.980\n",
       "Method:                 Least Squares   F-statistic:                     659.1\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          4.31e-151\n",
-      "Time:                        11:54:34   Log-Likelihood:                -569.14\n",
+      "Time:                        11:54:57   Log-Likelihood:                -569.14\n",
       "No. Observations:                 200   AIC:                             1170.\n",
       "Df Residuals:                     184   BIC:                             1223.\n",
       "Df Model:                          15                                         \n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.978\n",
       "Method:                 Least Squares   F-statistic:                     1485.\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          1.46e-158\n",
-      "Time:                        11:54:34   Log-Likelihood:                -584.04\n",
+      "Time:                        11:54:57   Log-Likelihood:                -584.04\n",
       "No. Observations:                 200   AIC:                             1182.\n",
       "Df Residuals:                     193   BIC:                             1205.\n",
       "Df Model:                           6                                         \n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.980\n",
       "Method:                 Least Squares   F-statistic:                     767.6\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          6.43e-154\n",
-      "Time:                        11:54:34   Log-Likelihood:                -569.29\n",
+      "Time:                        11:54:57   Log-Likelihood:                -569.29\n",
       "No. Observations:                 200   AIC:                             1167.\n",
       "Df Residuals:                     186   BIC:                             1213.\n",
       "Df Model:                          13                                         \n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.086\n",
       "Method:                 Least Squares   F-statistic:                              4.129\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    0.000632\n",
-      "Time:                        11:54:34   Log-Likelihood:                         -1160.0\n",
+      "Time:                        11:54:57   Log-Likelihood:                         -1160.0\n",
       "No. Observations:                 200   AIC:                                      2332.\n",
       "Df Residuals:                     194   BIC:                                      2352.\n",
       "Df Model:                           6                                                  \n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -458,6 +458,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OLS: ['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBBTCUSD' 'CBETHUSD']\n",
+    "ridge: ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'SMB'\n",
+    " 'HML' 'RMW' 'CMA' 'RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
+    "lasso: ['const' 'AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBETHUSD']\n",
+    "elastic net: ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'HML'\n",
+    " 'RMW' 'RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
+    "LAS: ['AVGO' 'Mkt-RF' 'HML' 'CMA' 'CBETHUSD' 'DJIA']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -480,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +591,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.997\n",
       "Method:                 Least Squares   F-statistic:                          1.011e+04\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   8.01e-244\n",
-      "Time:                        11:54:34   Log-Likelihood:                         -581.34\n",
+      "Time:                        11:54:57   Log-Likelihood:                         -581.34\n",
       "No. Observations:                 200   AIC:                                      1177.\n",
       "Df Residuals:                     193   BIC:                                      1200.\n",
       "Df Model:                           7                                                  \n",
@@ -627,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +653,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.978\n",
       "Method:                 Least Squares   F-statistic:                     672.4\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):          1.12e-148\n",
-      "Time:                        11:54:34   Log-Likelihood:                -582.28\n",
+      "Time:                        11:54:57   Log-Likelihood:                -582.28\n",
       "No. Observations:                 200   AIC:                             1193.\n",
       "Df Residuals:                     186   BIC:                             1239.\n",
       "Df Model:                          13                                         \n",
@@ -695,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +721,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.997\n",
       "Method:                 Least Squares   F-statistic:                              9253.\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   6.63e-244\n",
-      "Time:                        11:54:34   Log-Likelihood:                         -576.31\n",
+      "Time:                        11:54:57   Log-Likelihood:                         -576.31\n",
       "No. Observations:                 200   AIC:                                      1169.\n",
       "Df Residuals:                     192   BIC:                                      1195.\n",
       "Df Model:                           8                                                  \n",
@@ -765,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +791,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.997\n",
       "Method:                 Least Squares   F-statistic:                              8226.\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   3.93e-242\n",
-      "Time:                        11:54:34   Log-Likelihood:                         -575.77\n",
+      "Time:                        11:54:57   Log-Likelihood:                         -575.77\n",
       "No. Observations:                 200   AIC:                                      1170.\n",
       "Df Residuals:                     191   BIC:                                      1199.\n",
       "Df Model:                           9                                                  \n",
@@ -836,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +862,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.994\n",
       "Method:                 Least Squares   F-statistic:                              3879.\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                   8.30e-208\n",
-      "Time:                        11:54:34   Log-Likelihood:                         -662.90\n",
+      "Time:                        11:54:57   Log-Likelihood:                         -662.90\n",
       "No. Observations:                 200   AIC:                                      1342.\n",
       "Df Residuals:                     192   BIC:                                      1368.\n",
       "Df Model:                           8                                                  \n",
@@ -897,19 +910,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBBTCUSD' 'CBETHUSD']\n",
-      "['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'SMB'\n",
+      "OLS: ['AAPL' 'AVGO' 'INTC' 'QCOM' 'RF' 'CBBTCUSD' 'CBETHUSD']\n",
+      "ridge: ['const' 'AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'ADS_Index' 'Mkt-RF' 'SMB'\n",
       " 'HML' 'RMW' 'CMA' 'RF' 'CBETHUSD']\n",
-      "['AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
-      "['AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'Mkt-RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
-      "['AAPL' 'AMD' 'AVGO' 'Mkt-RF' 'HML' 'CMA' 'RF' 'CBETHUSD']\n"
+      "lasso: ['AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
+      "elastic net: ['AAPL' 'AMD' 'AVGO' 'INTC' 'QCOM' 'Mkt-RF' 'CBBTCUSD' 'CBETHUSD' 'DJIA']\n",
+      "LAS: ['AAPL' 'AMD' 'AVGO' 'Mkt-RF' 'HML' 'CMA' 'RF' 'CBETHUSD']\n"
      ]
     }
    ],
