--- a/Amst/Final Assignment/featurePreparation_Preprocessed.ipynb
+++ b/Amst/Final Assignment/featurePreparation_Preprocessed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Preprocessed data saved to ./preprocessed_stock_data.csv\n"
+      "Preprocessed data saved to ./preprocessed_data.csv\n"
      ]
     }
    ],
@@ -543,10 +543,12 @@
     "\n",
     "# 11. Prepare Final Dataset\n",
     "final_columns = log_return_columns + indicator_columns\n",
+    "data = data.reset_index(drop=True)\n",
     "final_data = data[final_columns]\n",
     "\n",
+    "\n",
     "# Save preprocessed data to a new file\n",
-    "output_file_path = './preprocessed_stock_data.csv'\n",
+    "output_file_path = './DataPreprocessed.csv'\n",
     "final_data.to_csv(output_file_path)\n",
     "print(f\"\\nPreprocessed data saved to {output_file_path}\")\n"
    ]
